profile dev tweaks